# social-knowledge

./: ARCHITECTURE.md  README.md  REQUIREMENT.md
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  build-docker.sh  pyproject.toml  run.sh
backend/src/: app.py
backend/src/api/: dependencies.py
backend/src/api/routers/: article_notifications.py  articles.py  auth.py  categories.py  notifications.py  sources.py  summaries.py
backend/src/config/: settings.py
backend/src/database/: __init__.py  connection.py  migrations.py  models.py
backend/src/middleware/: __init__.py  rate_limit.py  swagger_auth.py
backend/src/repositories/: __init__.py  category_repository.py  notification_repository.py  source_repository.py  user_repository.py
backend/src/schemas/: __init__.py  article.py  article_notification.py  category.py  notification.py  source.py  summarized_article.py  summary.py  user.py
backend/src/services/ai/: __init__.py  summarizer.py
backend/src/services/ai/providers/: __init__.py  gemini_provider.py
backend/src/services/crawler/: __init__.py  base_crawler.py  rss_parser.py  service.py
backend/src/services/crawler/news_sites/: __init__.py  bbc.py  thanh_nien.py  tuoi_tre.py  vietnamnet.py
backend/src/services/discord/: __init__.py  bot.py
backend/src/services/notifications/: sender.py
backend/src/services/scheduler/: __init__.py  job_scheduler.py
backend/src/templates/: bao-thanh-nien.html
backend/src/utils/: firebase_auth.py
frontend/: .env.local.example  README.md  next.config.ts  package.json  tsconfig.json
(+24 files in other folders)
